@@ -1,7 +1,11 @@
 v3.1.9:
   - OddEven functionality reviewed: Tilt Series set and Tomograms set have oddeven attributes/flags and
     there is no need for separate sets anymore. odd and even are internally referenced.
-  - Added a new ctf tomo viewer (CtfConsensusTomoViewer) 
+  - Added a new ctf tomo viewer (CtfConsensusTomoViewer)
+
+  Developers:
+  - SubTomogram.getVolName() uses Coordinate3D.getTomoId()
+
 v3.1.8:
   - SetOfSubtomoClasses improved: sampling rate set, coordinates injected
 v3.1.7:
